fixed spacing in insurance pages added alt tags

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,11 +47,11 @@ footer {
 }
 
 .insurancecard {
-  height: 75vh;
+  height: 60vh;
   background: #007bff4d;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
 }
 
